Added stop button.

--- a/demo/index.html
+++ b/demo/index.html
@@ -28,17 +28,9 @@
       demo here, you should download it and use your own ClientId. ClientId for the Soundcloud SDK can be requested at following
       url: https://soundcloud.com/you/apps
     </p>
-    <p>Also make sure you follow the Soundcloud guidelines as stated on their website: https://developers.soundcloud.com/docs/api/guide#playing
-      <ul>
-        <li>Credit the uploader as the creator of the sound</li>
-        <li>Credit SoundCloud as the source by including one of the logos found here</li>
-        <li>Link to the SoundCloud URL containing the work</li>
-        <li>If the sound is private link to the profile of the creator</li>
-      </ul>
-    </p>
     <demo-snippet>
       <template>
-        <soundcloud-player client-id="YOUR_CLIENTID_HERE" track-url="https://soundcloud.com/rushdownrecs/chime-pyrotechnics"></soundcloud-player>
+        <soundcloud-player client-id="YOUR_CLIENT_ID_HERE" track-url="https://soundcloud.com/rushdownrecs/chime-pyrotechnics"></soundcloud-player>
       </template>
     </demo-snippet>
   </div>
